This commit will add initial function try

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <script src="js/scripts.js"></script>
     <title>Jquery Effects Page</title>
   </head>
-
   <body>
     <div class="container">
       <h1>Links Galore</h1>
-      <p>click to find out more!</p>
-      <div id="item-hidden">
-        <p><span class="clickable">Click here</span> to find out what happens</p>
-      </div>
-      <div id="item-showing">
+        <p>There are many cool things to find explore!</p>
+      <div id="initially-hidden">
+        <p class="show">Do you want to see something? <span class="clickable">Click here</span> for an oasis!</p>
+       </div>
+       <div id="initially-showing">
         <p>There it is!</p>
         <img src="img/vista.jpg">
       </div>
